--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="book__content-down">
                     <h2 class="section-title">Long long time ago...</h2>
                     <hr class="deco-line">
-                    <img src="../dist/img/about.jpg" alt="Photo of my self" class="book__aboutme-img">
+                    <img src="dist/img/about.jpg" alt="Photo of my self" class="book__aboutme-img">
                     <hr class="deco-line">
                     <p class="book__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis quae, provident ut asperiores corrupti</p>
                 </div>
